--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,18 @@
     package="com.example.instakotlinapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
+
 
     <application
+        android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Share.ShareActivity"></activity>
         <activity android:name=".Login.RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,13 +24,10 @@
         </activity>
         <activity android:name=".Login.LoginActivity" />
         <activity android:name=".Profile.ProfileSettingsActivity" />
-        <activity android:name=".Share.ShareActivity" />
         <activity android:name=".Search.SearchActivity" />
         <activity android:name=".Profile.ProfileActivity" />
         <activity android:name=".News.NewsActivity" />
-        <activity android:name=".Home.HomeActivity">
-
-        </activity>
+        <activity android:name=".Home.HomeActivity"></activity>
     </application>
 
 </manifest>
